--- a/my-react-app/index.html
+++ b/my-react-app/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- type="image/svg+xml" -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="icon"  href="/Screenshot 2025-07-23 195349.png" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+    <title>Admin</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body style="margin: 0px;">
+    <div style="padding: 0px;" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
