--- a/project_smartStore/index.html
+++ b/project_smartStore/index.html
@@ -7,6 +7,7 @@
         rel="stylesheet"
       />
       <link rel="stylesheet" href="/styles.css" />
+       <link rel="icon"  href="/Screenshot 2025-07-23 195349.png" />
     </head>
     
     <body style="margin: 0px;">
