--- a/my-react-app/index.html
+++ b/my-react-app/index.html
@@ -7,7 +7,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <title>Admin</title>
   </head>
-  <body style="margin: 0px;">
+  <body style="margin: 0px ;padding: 0px;">
     <div style="padding: 0px;" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
